# expFast-bench

./: 128-bit-prime-modulus-gmp.csv  128-bit-prime-modulus.csv  256-bit-prime-modulus-gmp.csv  256-bit-prime-modulus.csv  384-bit-prime-modulus-bignum.csv  384-bit-prime-modulus.csv  512-bit-prime-modulus-gmp.csv  512-bit-prime-modulus.csv  README.md  cabal.project  flake.nix  plot.py
data-bignum/128/: benchmark_results_-16_32.csv  benchmark_results_-32_-16.csv  benchmark_results_-32_-32.csv  benchmark_results_-32_-48.csv  benchmark_results_-32_0.csv  benchmark_results_-32_16.csv  benchmark_results_-32_48.csv  benchmark_results_-48_-32.csv  benchmark_results_-48_16.csv  benchmark_results_-48_48.csv  benchmark_results_-64_-32.csv  benchmark_results_-64_-48.csv  benchmark_results_-64_-64.csv  benchmark_results_-64_48.csv  benchmark_results_-64_64.csv  benchmark_results_0_-32.csv  benchmark_results_0_0.csv  benchmark_results_16_-16.csv  benchmark_results_16_-32.csv  benchmark_results_16_-48.csv  benchmark_results_16_0.csv  benchmark_results_16_32.csv  benchmark_results_16_48.csv  benchmark_results_16_64.csv  benchmark_results_32_-32.csv  benchmark_results_32_-48.csv  benchmark_results_32_16.csv  benchmark_results_48_-48.csv  benchmark_results_48_-64.csv  benchmark_results_48_16.csv  benchmark_results_48_64.csv  benchmark_results_64_16.csv  benchmark_results_64_64.csv
data-bignum/256/: benchmark_results_-16_-32.csv  benchmark_results_-16_-64.csv  benchmark_results_-16_0.csv  (+46 more)
exp-bench/: exp-bench.cabal
exp-bench/exe/: Main.hs
exp-bench/src/: Main.hs
(+489 files in other folders)
