cabal-version: 3.0
name: exp-bench
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
build-type: Simple

executable exp-bench
    hs-source-dirs:   src
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:    base >= 4.2 && < 5
                    , cryptonite
                    , criterion
                    , bytestring

executable aggregate-data
    hs-source-dirs:   exe
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:    base >= 4.2 && < 5
                    , bytestring
                    , directory
                    , filepath
                    , vector
                    , cassava
                    , split